--- a/CPS/res/layout/activity_main.xml
+++ b/CPS/res/layout/activity_main.xml
@@ -11,5 +11,13 @@
 		android:clickable="true"
 		android:apiKey="0ApIF2ZPAnXtRQs58gpWqEL8TRmkza1DEmPOaPw"
 	/>
+	
+	<!-- You will need to replace the apiKey above with your own key -->
+	<!-- To make this easier, enter your key below so it will always be saved in this file -->
+	<!-- John's Key: 0ApIF2ZPAnXtRQs58gpWqEL8TRmkza1DEmPOaPw -->
+	<!-- Dawn's Key: XXX -->
+	<!-- Nadeeka's Key: XXX -->
+	<!-- Prateek's Key: XXX -->
+	<!-- Anish's Key: XXX -->
 
 </RelativeLayout>
