added comment for everyone's apiKeys. Please add yours.

--- a/CPS/res/layout/main.xml
+++ b/CPS/res/layout/main.xml
@@ -10,7 +10,15 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:clickable="true"
-		android:apiKey="0Hl6AbfmgLixetythuQqP3gNzpxXO80Y4dffpyg"
+		android:apiKey="0ApIF2ZPAnXtRQs58gpWqEL8TRmkza1DEmPOaPw"
 	/>
+	
+	<!-- Here are everyone's keys.  Replace the one above with yours.
+	John:    0ApIF2ZPAnXtRQs58gpWqEL8TRmkza1DEmPOaPw
+	Prateek: 0Hl6AbfmgLixetythuQqP3gNzpxXO80Y4dffpyg
+	Dawn:    xxxx
+	Nadeeka: xxxx
+	Anish:   xxxx
+	 -->
 
 </RelativeLayout>
