--- a/CPS/res/layout/lotmapactivity.xml
+++ b/CPS/res/layout/lotmapactivity.xml
@@ -10,13 +10,13 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:clickable="true"
-		android:apiKey="0ApIF2ZPAnXtRQs58gpWqEL8TRmkza1DEmPOaPw"
+		android:apiKey="0v-dHCVDBpC-wcdJcZhOtkJ74EEkhChAzgtsg8g"
 	/>
 	
 	<!-- Here are everyone's keys.  Replace the one above with yours.
 	John:    0ApIF2ZPAnXtRQs58gpWqEL8TRmkza1DEmPOaPw
 	Prateek: 0Hl6AbfmgLixetythuQqP3gNzpxXO80Y4dffpyg
-	Dawn:    xxxx
+	Dawn:    0v-dHCVDBpC-wcdJcZhOtkJ74EEkhChAzgtsg8g
 	Nadeeka: xxxx
 	Anish:   xxxx
 	 -->
