--- a/CPS/res/layout/viewspotactivity.xml
+++ b/CPS/res/layout/viewspotactivity.xml
@@ -1,7 +1,10 @@
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/background"
+    android:gravity="center_vertical" >
+    
 
         <TextView
             android:id="@+id/viewSpot"
@@ -17,9 +20,9 @@
             android:id="@+id/lot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
             android:layout_below="@+id/viewSpot"
             android:layout_marginTop="16dp"
+            android:layout_centerHorizontal="true"
             android:text="Lot: "
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -37,7 +40,7 @@
             android:id="@+id/spot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_centerHorizontal="true"
             android:layout_below="@+id/lot"
             android:text="Spot: "
             android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -60,7 +63,7 @@
             android:layout_alignParentLeft="true"
             android:layout_marginBottom="14dp"
             android:layout_marginLeft="14dp"
-            android:text="@string/checkInOut" />
+            android:text="Check In" />
 
         <Button
             android:id="@+id/cancelReservationButton"
