--- a/CPS/res/layout/layoutselect.xml
+++ b/CPS/res/layout/layoutselect.xml
@@ -6,13 +6,6 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp" >
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#AA3344"
-        android:visibility="visible" />
-    
     <Button
         android:id="@+id/bReserve"
         android:layout_width="wrap_content"
@@ -21,21 +14,19 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="5dp"
         android:text="Reserve"
-        android:typeface="monospace" />
-
-    <Spinner
+        android:typeface="monospace" /><Spinner
         android:id="@+id/sspot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="5dp"
+        android:clipToPadding="true" />
 
     <TextView
         android:id="@+id/tvSpot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/bReserve"
-        android:layout_alignParentLeft="true"
+        android:layout_above="@id/sspot"
         android:layout_marginLeft="5dp"
         android:text="Select Spot"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -44,16 +35,36 @@
         android:id="@+id/LotMapFragmentFrameSS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spinner"
         android:layout_marginBottom="70dp"
         android:layout_marginTop="30dp" >
-
-        <fragment
-            android:name="edu.uco.teamdawn.LotMapFragment"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" 
-            android:id="@+id/LotMapFragmentSS"/>
-        
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/tvHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:text="Select Spot"
+        android:textAppearance="?android:attr/textAppearanceMedium" /><Spinner
+        android:id="@+id/spinner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/LotMapFragmentFrameSS"
+        android:layout_below="@+id/tvHeader"
+        android:layout_marginBottom="2dp"
+        android:background="#CCCCCC"
+        android:visibility="visible" />
+
+
+
+    <fragment
+        android:id="@+id/LotMapFragmentSS"
+        android:name="edu.uco.teamdawn.LotMapFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/tvSpot"
+        android:layout_alignLeft="@+id/LotMapFragmentFrameSS"
+        android:layout_below="@+id/spinner" />
 
 </RelativeLayout>
