All the changes I've made.

--- a/CPS/res/layout/layoutlogin.xml
+++ b/CPS/res/layout/layoutlogin.xml
@@ -95,11 +95,10 @@
         android:id="@+id/tvRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/bRegister"
-        android:layout_alignBottom="@+id/bRegister"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/bRegister"
+        android:layout_alignRight="@+id/editText2"
         android:text="New User?"
+        android:padding="10dp"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
