--- a/CPS/res/layout/layoutselect.xml
+++ b/CPS/res/layout/layoutselect.xml
@@ -5,41 +5,29 @@
     android:background="@drawable/background"
     android:paddingLeft="10dp"
     android:paddingRight="10dp" >
-
+
     <Button
         android:id="@+id/bReserve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/LotMapFragmentFrameSS"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/tvSpot"
+        android:layout_alignRight="@+id/LotMapFragmentFrameSS"
         android:layout_marginBottom="5dp"
-        android:layout_marginRight="5dp"
         android:text="Reserve" />
-
-    <Spinner
-        android:id="@+id/sspot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="5dp" />
-
-    <TextView
-        android:id="@+id/tvSpot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/sspot"
-        android:layout_marginLeft="5dp"
-        android:text="Select Spot"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
+
     <FrameLayout
         android:id="@+id/LotMapFragmentFrameSS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="70dp"
-        android:layout_marginTop="30dp" >
+        android:layout_marginTop="40dp" >
+
+    <fragment
+        android:id="@+id/LotMapFragmentSS"
+        android:name="edu.uco.teamdawn.LotMapFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="375dp" />
+        
     </FrameLayout>
 
     <TextView
@@ -49,24 +37,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerInParent="true"
         android:text="Select Spot"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:padding="10dp" />
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/LotMapFragmentFrameSS"
-        android:layout_below="@+id/tvHeader"
-        android:layout_marginBottom="2dp"
-        android:visibility="visible" />
+    
 
-    <fragment
-        android:id="@+id/LotMapFragmentSS"
-        android:name="edu.uco.teamdawn.LotMapFragment"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/tvSpot"
-        android:layout_alignLeft="@+id/LotMapFragmentFrameSS"
-        android:layout_below="@+id/spinner" />
+
+    
 
 </RelativeLayout>
