--- a/CPS/res/layout/viewspotactivity.xml
+++ b/CPS/res/layout/viewspotactivity.xml
@@ -4,93 +4,71 @@
     android:layout_height="fill_parent"
     android:background="@drawable/background"
     android:gravity="center_vertical" >
+
+    <TextView
+        android:id="@+id/viewSpot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="View Spot"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:id="@+id/lot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/viewSpot"
+        android:layout_marginTop="16dp"
+        android:layout_toLeftOf="@+id/viewSpot"
+        android:text="Lot: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+    
+    <Button
+        android:id="@+id/checkInOutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="14dp"
+        android:layout_marginLeft="14dp"
+        android:text="Check In" />
+
+    <Button
+        android:id="@+id/cancelReservationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="14dp"
+        android:layout_marginRight="14dp"
+        android:text="CancelReservation" />
+
+    <FrameLayout
+        android:id="@+id/LotMapFragmentFrame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/checkInOutButton"
+        android:layout_alignLeft="@+id/checkInOutButton"
+        android:layout_alignRight="@+id/cancelReservationButton"
+        android:layout_below="@+id/lot" >
+
+        <fragment
+            android:id="@+id/LotMapFragment"
+            android:name="edu.uco.teamdawn.LotMapFragment"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/spot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/lot"
+        android:layout_alignBottom="@+id/lot"
+        android:layout_toRightOf="@+id/viewSpot"
+        android:text="Spot: "
+        android:textAppearance="?android:attr/textAppearanceMedium" />
     
-
-        <TextView
-            android:id="@+id/viewSpot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="14dp"
-            android:text="View Spot"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
-        <TextView
-            android:id="@+id/lot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/viewSpot"
-            android:layout_marginTop="16dp"
-            android:layout_centerHorizontal="true"
-            android:text="Lot: "
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/lotNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/lot"
-            android:layout_marginLeft="22dp"
-            android:layout_toRightOf="@+id/lot"
-            android:text="@string/lotNumber"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/spot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/lot"
-            android:text="Spot: "
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <TextView
-            android:id="@+id/spotNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/spot"
-            android:layout_alignBottom="@+id/spot"
-            android:layout_alignLeft="@+id/lotNumber"
-            android:text="@string/spotNumber"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <Button
-            android:id="@+id/checkInOutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginBottom="14dp"
-            android:layout_marginLeft="14dp"
-            android:text="Check In" />
-
-        <Button
-            android:id="@+id/cancelReservationButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginBottom="14dp"
-            android:layout_marginRight="14dp"
-            android:text="CancelReservation" />
-
-        <FrameLayout
-            android:id="@+id/LotMapFragmentFrame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/checkInOutButton"
-            android:layout_alignLeft="@+id/checkInOutButton"
-            android:layout_alignRight="@+id/cancelReservationButton"
-            android:layout_below="@+id/spot" >
-
-            <fragment
-                android:id="@+id/LotMapFragment"
-                android:name="edu.uco.teamdawn.LotMapFragment"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
-
-        </FrameLayout>
-
-    </RelativeLayout>
+</RelativeLayout>
